--- a/home.css
+++ b/home.css
@@ -81,6 +81,12 @@ body{
     max-width: 40%;
 }
 
+#white_rectangle{
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    background-color: white;
+}
 #main_window{
     width:40%;
     height: 500px;
